# Rust-Fluid-Sim

./: Cargo.toml  README.md
src/: fluid.rs  main.rs  old.glsl  render.rs  shaders.rs
src/shaders/: advectV.glsl  advect_color.glsl  advect_velocity.glsl  div.glsl  draw.glsl  fragment2.glsl  initial.glsl  initialV.glsl  jacobi.glsl  project.glsl  vertex.glsl
